@@ -5,6 +5,7 @@ Added ZRCP commands:
 -get-ui-io-ports: to get keyboard state and joystick
 -get-snapshot: get a ZSF snapshot from ZRCP
 -put-snapshot: put a ZSF snapshot from ZRCP
+-send-keys-event: simulates key press/release
 
 Improved assembler: added defs command
 Improved AY Sheet: now you can select which AY Chip to show
